--- a/app/views/admin/spa_entries/index.xls.erb
+++ b/app/views/admin/spa_entries/index.xls.erb
@@ -29,19 +29,19 @@
       </Row>
       <% @lot_numbers.each_with_index do |lot_number, index| %>
           <Row>
-            <Cell><Data ss:Type="String"><%= lot_number.created_at.strftime("%m-%d-%Y, %H:%M") %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= Person.find(lot_number.deposits.first.collector_id).full_name %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.created_at.strftime("%m-%d-%Y, %H:%M") rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= Person.find(lot_number.deposits.first.collector_id).full_name rescue nil %></Data></Cell>
             <Cell><Data ss:Type="String"><%= lot_number.number %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.date.strftime("%m-%d-%Y") %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant.species %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant.common_name %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.date.strftime("%m-%d-%Y") rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant.species rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant.common_name rescue nil %></Data></Cell>
             <Cell><Data ss:Type="String"><%= lot_number.region %></Data></Cell>
             <Cell><Data ss:Type="String"><%= lot_number.provenance %></Data></Cell>
             <Cell><Data ss:Type="String"><%= lot_number.location %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.reference %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.qty_bank %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant_population %></Data></Cell>
-            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.comments %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.reference rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.qty_bank rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.plant_population rescue nil %></Data></Cell>
+            <Cell><Data ss:Type="String"><%= lot_number.deposits.first.comments rescue nil %></Data></Cell>
           </Row>
       <% end %>
     </Table>
