--- a/app/views/admin/order_forms/_seeding.html.erb
+++ b/app/views/admin/order_forms/_seeding.html.erb
@@ -34,7 +34,7 @@
 
 
 <div class="form-group">
-  <%= f.label :postal_address, class: "col-sm-2" %>
+  <%= f.label :landholder_postal_address, class: "col-sm-2" %>
   <div class="col-sm-8">
     <%= f.text_area :landholder_address, class: "form-control", rows: 3 %>
   </div>
