--- a/app/views/shared/order_forms/_seeding.html.erb
+++ b/app/views/shared/order_forms/_seeding.html.erb
@@ -12,7 +12,7 @@
 
 
   <tr>
-    <th colspan="2">Postal Address</th>
+    <th colspan="2">Officer Address</th>
     <td colspan="4"><%= order_form.officer_address %></td>
   </tr>
 
@@ -24,7 +24,7 @@
   </tr>
 
   <tr>
-    <th colspan="2">Postal Address</th>
+    <th colspan="2">Landholder Postal Address</th>
     <td colspan="4"><%= order_form.landholder_address %></td>
   </tr>
 
