--- a/app/views/home/catalogue_general.html.erb
+++ b/app/views/home/catalogue_general.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Public Catalogue #{export_to_excel_link}".html_safe %>
+<%= content_for :page_title, "Public Catalogue #{export_to_excel_link('xls', true)}".html_safe %>
 
 <%= render partial: "table_header" %>
 
