--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -19,7 +19,7 @@
     <th><%= model_class.human_attribute_name(:postcode) %></th>
     <th><%= model_class.human_attribute_name(:email) %></th>
     <th><%= model_class.human_attribute_name(:phone) %></th>
-    <% if @people.first.type == "Person::Collector" %>
+    <% if @people.first && @people.first.type == "Person::Collector" %>
       <th><%= model_class.human_attribute_name(:is_customer) %></th>
     <% end %>
     <th><%= t '.actions', :default => t("helpers.actions") %></th>
