--- a/app/views/customer/order_forms/_items_for_seeding.html.erb
+++ b/app/views/customer/order_forms/_items_for_seeding.html.erb
@@ -10,16 +10,17 @@
   </thead>
 
   <tbody>
-  <% @deposits.each do |deposit| %>
+  <% @plants.each do |plant| %>
       <tr>
-        <td><%= deposit.plant.species %></td>
-        <td><%= deposit.plant.common_name %></td>
+        <td><%= plant.species %></td>
+        <td><%= plant.common_name %></td>
         <td class="col-sm-5">
           <div class="col-sm-2">
             <%= check_box_tag "select", "", false, class: "order_item_check" %>
           </div>
           <div class="col-sm-10" style="display: none;">
-            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id, disabled: true %>
+            <% deposit = Deposit.where(plant_id: plant.id).first %>
+            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit}][deposit_id]", deposit.id, disabled: true %>
           </div>
         </td>
       </tr>
