--- a/app/views/customer/order_forms/_spa.html.erb
+++ b/app/views/customer/order_forms/_spa.html.erb
@@ -103,7 +103,7 @@
 
 <hr>
 <div class="col-sm-10">
-  <%= render partial: "items_for_seeding", locals: {grams: false, spa_specific: false} %>
+  <%= render partial: "items_for_seeding", locals: {grams: false, spa_specific: true} %>
 </div>
 
 
