--- a/app/views/customer/order_forms/new.html.erb
+++ b/app/views/customer/order_forms/new.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <script type="text/javascript">
-    $(window).scroll(function () {
+    $(window).scrollTopll(function () {
         if ($(this).scrollTop() > 100) {
             $('#fixed_action').css('position', 'fixed');
             $('#fixed_action').css('top', '100px;');
