--- a/app/views/admin/lot_numbers/_form.html.erb
+++ b/app/views/admin/lot_numbers/_form.html.erb
@@ -3,7 +3,11 @@
       <div class="control-group">
         <%= f.label :number, :class => 'control-label' %>
         <div class="controls">
-          <%= f.text_field :number, :class => 'text_field' %>
+        <% if @lot_number.number == nil %>
+          <%= f.text_field :number, :class => 'text_field', value: LotNumber.maximum(:number) + 1 %>
+        <% else %>
+          <%= f.text_field :number, :class => 'text_field' %>  
+        <% end %>
         </div>
       </div>
       <div class="control-group">
