--- a/app/views/customer/order_forms/_items_for_seeding.html.erb
+++ b/app/views/customer/order_forms/_items_for_seeding.html.erb
@@ -6,6 +6,7 @@
     <th>Botanical Name</th>
     <th>Common Name</th>
     <th>Lot Number</th>
+    <th>SPA name</th>
     <th>Provenance</th>
     <th>Region</th>
     <th>Qty</th>
@@ -21,6 +22,7 @@
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.plant.common_name %></td>
         <td><%= deposit.lot_number.number %></td>
+        <td><%= deposit.lot_number.spa_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
         <td><%= deposit.lot_number.region %></td>
         <td><%= deposit.qty_bank %></td>
