--- a/app/views/customer/order_forms/_items_for_seeding.html.erb
+++ b/app/views/customer/order_forms/_items_for_seeding.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.plant.common_name %></td>
-        <td><%= deposit.lot_number.number %></td>
+        <td><%= "#{deposit.lot_number.number}/#{deposit.date.strftime("%y")}" %></td>
         <td><%= deposit.lot_number.spa_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
         <td><%= deposit.lot_number.region %></td>
