--- a/app/views/admin/order_forms/_nursery.html.erb
+++ b/app/views/admin/order_forms/_nursery.html.erb
@@ -8,6 +8,26 @@
 </div>
 
 <div class="form-group">
+  <%= f.label :payee_name, class: "col-sm-2" %>
+  <div class="col-sm-3">
+    <%= f.text_field :payee_name, class: "form-control" %>
+  </div>
+
+  <%= f.label "Payee contact Phone/email", class: "col-sm-2" %>
+  <div class="col-sm-3">
+    <%= f.text_field :payee_number, class: "form-control" %>
+  </div>
+</div>
+
+
+<div class="form-group">
+  <%= f.label :payee_postal_address, class: "col-sm-2" %>
+  <div class="col-sm-8">
+    <%= f.text_area :payee_address, class: "form-control", rows: 3 %>
+  </div>
+</div>
+
+<div class="form-group">
   <%= f.label :abn, class: "col-sm-2" %>
   <div class="col-sm-8">
     <%= f.text_field :abn, class: "form-control" %>
