--- a/app/views/customer/order_forms/_spa.html.erb
+++ b/app/views/customer/order_forms/_spa.html.erb
@@ -46,7 +46,7 @@
     <%= f.text_field :payee_name, class: "form-control" %>
   </div>
 
-  <%= f.label :payee_contact_number, class: "col-sm-2" %>
+  <%= f.label "Payee contact Phone/email", class: "col-sm-2" %>
   <div class="col-sm-3">
     <%= f.text_field :payee_number, class: "form-control" %>
   </div>
