sprint 4 feedback review

--- a/app/views/shared/order_forms/_nursery.html.erb
+++ b/app/views/shared/order_forms/_nursery.html.erb
@@ -19,6 +19,21 @@
   </tr>
 
   <tr>
+    <th colspan="2">Payee Name</th>
+    <td colspan="2"><%= order_form.payee_name %></td>
+  </tr>
+
+  <tr>
+    <th colspan="2">Payee Phone/Email</th>
+    <td colspan="2"><%= order_form.payee_number %></td>
+  </tr>
+
+  <tr>
+    <th colspan="2">Payee Address</th>
+    <td colspan="2"><%= order_form.payee_address %></td>
+  </tr>
+
+  <tr>
     <th colspan="2">Contact Person</th>
     <td colspan="2"><%= order_form.officer_name %></td>
   </tr>
