--- a/app/views/shared/order_forms/_spa.html.erb
+++ b/app/views/shared/order_forms/_spa.html.erb
@@ -28,6 +28,18 @@
     <td colspan="4"><%= order_form.landholder_address %></td>
   </tr>
 
+  <tr>
+    <th colspan="2">Payee Name</th>
+    <td colspan="2"><%= order_form.payee_name %></td>
+    <th>Payee Phone/Email</th>
+    <td><%= order_form.payee_number %></td>
+  </tr>
+
+  <tr>
+    <th colspan="2">Payee Address</th>
+    <td colspan="4"><%= order_form.payee_address %></td>
+  </tr>
+
 
   <tr>
     <th colspan="2">Property Address/Location</th>
