--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -115,3 +115,11 @@
 
 
 
+<script>
+function sync(textbox)
+{
+  document.getElementById('order_form_payee_name').value = order_form_officer_name.value;
+  document.getElementById('order_form_payee_number').value = order_form_officer_number.value;
+  document.getElementById('order_form_payee_address').value = order_form_officer_address.value;
+}
+</script>
