--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -2,7 +2,7 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogues
     <i class="fa fa-angle-down parent-symbol"></i></a>
   <ul class="dropdown-menu">
-    <li><%= link_to "Public", catalogue_general_path %></li>
+    <li><%= link_to "Seedbank", catalogue_general_path %></li>
     <li><%= link_to "SPA", catalogue_spa_path %></li>
     <li><%= link_to "Direct Seeding", catalogue_seeding_path %></li>
     <li><%= link_to "Nursery", catalogue_nursery_path %></li>
