--- a/app/views/customer/order_forms/_spa.html.erb
+++ b/app/views/customer/order_forms/_spa.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Direct Seeding Order Form" %>
+<%= content_for :page_title, "SPA Order Form" %>
 
 <div class="form-group">
   <%= f.label :officer_name, class: "col-sm-2" %>
@@ -42,6 +42,10 @@
 
 <div class="form-group">
   <%= f.label :payee_name, class: "col-sm-2" %>
+  <input type="checkbox" id="same_as_officer" name="same_as_officer"/>
+  <label>Same as Officer</label>
+  <input type="checkbox" id="same_as_landholer" name="same_as_landholer"/>
+  <label>Same as Landholder</label>
   <div class="col-sm-3">
     <%= f.text_field :payee_name, class: "form-control" %>
   </div>
@@ -62,13 +66,17 @@
 
 <div class="form-group">
   <%= f.label :property_address, class: "col-sm-2" %>
+  <input type="checkbox" id="address_as_payee" name="same_as_officer"/>
+  <label>Same as Payee</label>
+  <input type="checkbox" id="address_as_landholer" name="same_as_landholer"/>
+  <label>Same as Landholder</label>
   <div class="col-sm-8">
     <%= f.text_area :property_address, class: "form-control", rows: 3 %>
   </div>
 </div>
 
 
-<div class="form-group">
+<!-- <div class="form-group">
   <%= f.label :hectare, class: "col-sm-2" %>
   <div class="col-sm-3">
     <%= f.text_field :hectare, class: "form-control" %>
@@ -78,14 +86,14 @@
   <div class="col-sm-3">
     <%= f.text_field :kilometer, class: "form-control" %>
   </div>
-</div>
+</div> -->
 
 <div class="form-group">
-  <%= f.label :grams_per_km, class: "col-sm-2" %>
-  <div class="col-sm-3">
-    <%= f.text_field :grams_per_km, class: "form-control" %>
+  <%#= f.label :grams_per_km, class: "col-sm-2" %>
+<!--   <div class="col-sm-3">
+    <%#= f.text_field :grams_per_km, class: "form-control" %>
   </div>
-
+ -->
   <%= f.label :pon, "PON", class: "col-sm-2" %>
   <div class="col-sm-3">
     <%= f.text_field :pon, class: "form-control" %>
@@ -114,4 +122,49 @@
 </div>
 
 
+<script>
+$("#same_as_officer").change(function(){
+  if ($(this).is(':checked')) {
+    $("#order_form_payee_name").val($("#order_form_officer_name").val());
+    $("#order_form_payee_number").val($("#order_form_officer_number").val());
+    $("#order_form_payee_address").text($("#order_form_officer_address").text());
+    $('#same_as_landholer').attr('checked', false);
+  } else {
+    $("#order_form_payee_name").val("");
+    $("#order_form_payee_number").val("");
+    $("#order_form_payee_address").text("");    
+  }
+})
 
+$("#same_as_landholer").change(function(){
+  if ($(this).is(':checked')) {
+    $("#order_form_payee_name").val($("#order_form_landholder_name").val());
+    $("#order_form_payee_number").val($("#order_form_landholder_number").val());
+    $("#order_form_payee_address").text($("#order_form_landholder_address").text());
+    $('#same_as_officer').attr('checked', false);
+  } else {
+    $("#order_form_payee_name").val("");
+    $("#order_form_payee_number").val("");
+    $("#order_form_payee_address").text("");
+  }
+})
+
+$("#address_as_landholer").change(function(){
+  if ($(this).is(':checked')) {
+    $("#order_form_property_address").val($("#order_form_landholder_address").val());
+    $('#address_as_payee').attr('checked', false);
+  } else {
+    $("#order_form_property_address").val("");
+  }
+})
+
+$("#address_as_payee").change(function(){
+  if ($(this).is(':checked')) {
+    $("#order_form_property_address").val($("#order_form_payee_address").val());
+    $('#address_as_landholer').attr('checked', false);
+  } else {
+    $("#order_form_property_address").val("");
+  }
+})
+
+</script>
