--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <div class="container">
           <!-- Page Info -->
           <div class="page-info clearfix usermenu">
-            <h3>
+            <h3 style="color: red;">
               <%= yield :page_title %>
               <small class="pull-right" style=" margin-bottom: 15px; "><%= yield :page_link %></small>
             </h3>
